name:                logfmt
version:             0.1.0.0
author:              Ayman Osman
maintainer:          aymano.osman@gmail.com
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:     Logfmt, Logfmt.Json
  -- other-modules:
  other-extensions:    OverloadedStrings
  build-depends:       base >=4.8 && <4.9
                     , QuickCheck
                     , text
                     , attoparsec
                     , aeson
                     , hspec
                     , hspec-attoparsec
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite test
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  build-depends:       base
                     , logfmt
                     , text
                     , hspec
                     , hspec-attoparsec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
